# dvc-and-mlflow-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  train.py
.dvc/: config
src/: train.py
