[tool.poetry]
name = "dvc-and-mlflow-tutorial"
version = "0.1.0"
description = "A tutorial on using dvc and mlflow together"
authors = ["isuru <isuru@imrsv.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^1.24.0"
dvc = {extras = ["gs"], version = "^2.9.5"}
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
